# timminaters-addons

./: .gitignore  README.md  package-lock.json  package.json  repository.json  repository.yaml
.github/: FUNDING.yml
.github/workflows/: build-app.yml  main.yml  publish-speaker-recognition.yml  test.yml
compreface/: Dockerfile  config.json  run.sh
esphome_mcp/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  healthcheck.py  launcher.py  pyproject.toml
esphome_mcp/src/esphome_mcp/: __main__.py  server.py
esphome_mcp/tests/: test_launcher.py
esphome_mcp/translations/: en.yaml  nl.yaml
homeassistant-samsung-frame-art/: Dockerfile
homeassistant-samsung-frametv-artchanger/: .gitignore  Dockerfile  README.md  art.py  config.yaml  run-local.ps1  run.sh
homeassistant-samsung-frametv-artchanger/app/: config.py  errors.py  main.py  media.py  request_context.py  runtime.py  schemas.py  service.py  stdin_commands.py  store.py  tv_client.py
homeassistant-samsung-frametv-artchanger/sources/: media_folder.py
homeassistant-samsung-frametv-artchanger/standalone-data/: gallery_state.json
homeassistant-samsung-frametv-artchanger/tests/: test_gallery_service_sync.py  test_media_service.py  test_runtime_state.py  test_store.py
llm_proxy/: Dockerfile  README.md  config.yaml  run.sh
llm_proxy/config/: config.go
speaker_recognition/: CHANGELOG.md  DF3_STREAMING_VALIDATION.md  DOCS.md  Dockerfile  FORK_AUDIT.md  LICENSE.md  MODEL_BENCHMARK.md  README.md  THIRD_PARTY_NOTICES.md  config.yaml  requirements-test.txt  requirements.txt
(+55 files in other folders)
