[project]
name = "esphome-mcp"
version = "2026.06.1"
description = "MCP server for the ESPHome 2026.6+ Device Builder dashboard"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "loryanstrant", email = "loryan@loryanstrant.com" }]
dependencies = [
    "fastmcp>=3.2.0,<4",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/loryanstrant/ESPHome-MCP"
"Upstream (kdkavanagh)" = "https://github.com/kdkavanagh/esphome-mcp"

[project.scripts]
esphome-mcp = "esphome_mcp.__main__:main"
esphome-mcp-web = "esphome_mcp.__main__:main_web"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.20",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "esphome",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that require a real ESPHome dashboard (set ESPHOME_DASHBOARD_URL)",
]

[tool.ty.environment]
python-version = "3.13"
